Updates from Overleaf

--- a/abmath.sty
+++ b/abmath.sty
@@ -90,7 +90,8 @@
 \DeclareRobustCommand{\eexp}[1]{\mymath{e^{#1}}}
 \DeclareRobustCommand{\plusquad}{\mymath{\oplus}}
 \DeclareRobustCommand{\logOf}[1]{\log\!\parenths{#1}}
-\DeclareRobustCommand{\lnOf}[1]{\ln\!\parenths{#1}}
+\DeclareRobustCommand{\lnOfbraces}[1]{\ln\!\parenths{#1}}
+\DeclareRobustCommand{\lnOf}[1]{\ln#1}
 \DeclareRobustCommand{\liOf}[1]{\li\!\parenths{#1}}
 \DeclareRobustCommand{\signOf}[1]{\sign\!\parenths{#1}}
 \DeclareRobustCommand{\diagOf}[1]{\diag\!\parenths{#1}}
