--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -86,7 +86,7 @@ where $Q_0$ is the initial charge, $Q$ is the charge after recombination, $q_0$ 
 
 In their development of the box model, Thomas and Imel assumed the diffusion and ion mobility to be zero and instead of the cylindrical column used in the Jaff\'{e} model, they considered a box with a uniform charge distribution such that, 
 \begin{equation}
-    Q = Q_{0}\frac{1}{\xi}ln(1+\xi),
+    Q = Q_{0}\frac{1}{\xi}\lnOfbraces{1+\xi},
 \end{equation}
 where $\xi = \alpha Q_0/E$. $\alpha$ is a free parameter and $Q$ and $Q_0$ are defined as in \EquationRef{Jaffe}\cite{LArTPC_book}\cite{Recombination_box_model}.
 
