--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1425,3 +1425,14 @@ abstract = {Geant4 is a toolkit for simulating the passage of particles through 
 	title = {Asymptotic formulae for likelihood-based tests of new physics},
 	journal = {The European Physical Journal C}
 }
+
+@article{ICARUS_muon_smearing,
+	doi = {10.1140/epjc/s10052-006-0051-3},
+	url = {https://doi.org/10.1140/epjc/s10052-006-0051-3},
+	year = 2006,
+	volume = {48},
+	pages = {667--676},
+	author = {Ankowski, A. and others},
+	title = "{Measurement of through-going particle momentum by means of multiple scattering with the ICARUS T600 TPC}",
+	journal = {The European Physical Journal C - Particles and Fields}
+}
