--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1436,3 +1436,12 @@ abstract = {Geant4 is a toolkit for simulating the passage of particles through 
 	title = "{Measurement of through-going particle momentum by means of multiple scattering with the ICARUS T600 TPC}",
 	journal = {The European Physical Journal C - Particles and Fields}
 }
+
+@misc{tau_oscillations,
+title = "{SBND Oscillations Working Group Kick-off}",
+author = {Goergia Karagiorgi and Joseph Zennamo},
+year = "2022",
+howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27844}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27844}},
+note = "{[Accessed: Oct, 2022]}"
+}
+
