--- a/preamble.tex
+++ b/preamble.tex
@@ -18,6 +18,7 @@
 \usepackage{lscape}
 \usetikzlibrary{angles, quotes}
 \usepackage{parskip}
+
 %\usepackage{indentfirst}
 \usepackage[en-GB]{datetime2}
 \makeatletter
@@ -34,6 +35,10 @@
 \usepackage[xindy,toc,nonumberlist]{glossaries} 
 \input{glossary}
 \makeglossaries
+
+% add line numbers
+\usepackage{lineno}
+\linenumbers
 
 % sort out the captions
 \captionsetup{width = \textwidth}
