--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -500,9 +500,10 @@ where $\delta_{\alpha\beta}$ is the Kronecker delta between states $\alpha$ and 
 When performing a search for sterile neutrinos, typically there are three channels, one or more of which may be probed (plus their corresponding anti-neutrino variants). For each of these channels, the relevant \gls{pmns} matrix elements are parameterised in terms of mixing angles such that,
 \begin{equation}
 \centering
-    &\text{\numu disappearance } (\numu \rightarrow \numu) &: \sin^2{2\thetamumu} &\isdefinedas 4|U_{\mu 4}|^2(1 - |U_{\mu 4}|^2) \\
-    &\text{\nue appearance } (\numu \rightarrow \nue) &: \sin^2{2\thetamue} &\isdefinedas 4|U_{\mu 4}|^2|U_{e4}|^2 \\
+    &\text{\numu disappearance } (\numu \rightarrow \numu) &: \sin^2{2\thetamumu} &\isdefinedas 4|U_{\mu 4}|^2(1 - |U_{\mu 4}|^2) \label{eqn:sinsq2thmumu}\\
+    &\text{\nue appearance } (\numu \rightarrow \nue) &: \sin^2{2\thetamue} &\isdefinedas 4|U_{\mu 4}|^2|U_{e4}|^2 \label{eqn:sinsq2thmue} \\
     &\text{\nue disappearance } (\nue \rightarrow \nue) &: \sin^2{2\thetaee} &\isdefinedas 4|U_{e 4}|^2(1 - |U_{e4}|^2).
+    \label{eqn:sinsq2thee}
 \end{equation}
 It should be noted that \nue appearance depends on $U_{\mu 4}$ and $U_{e4}$, which \numu and \nue disappearance depend on respectively. The observation of \nue appearance would therefore automatically imply that \numu and \nue disappearance is also present. Additionally, this allows these parameters to be over constrained \cite{SBN_paper}. The current global best fit values for the three mixing angles and the mass splitting term, $\Delta m^2_{41}$ are outlined in \TableRef{table:sterile_best_fit_params}.
 
