Updates from Overleaf

--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -154,7 +154,7 @@ Particle                 & Decay Mode                        & Branching Ratio (
                          & $\pi^+ + e^- + \nuebar$         & 20.197              \\
                          & $\pi^- + \mu^+ + \numu$       & 13.551              \\
                          & $\pi^+ + \mu^- + \numubar$ & 13.469              \\ \hline
-$\mu^+$                   & $e^+ + \nue + \nuebar$       & 100                
+$\mu^+$                   & $e^+ + \nue + \numubar$       & 100                
 \end{tabular}
 \caption[Hadron decay mode in the BNB.]{The decay modes of the hadrons produced by the \gls{bnb} when running in neutrino mode. The branching ratio of each of the decay modes is also given \cite{BNB_flux}.}
 \label{Table: BNB decay modes}
