--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
   \input{chap2-motivation_for_steriles}
   %\input{chap3-SBN_Program}
   %\input{chap4-Energy_Reco}
-  %input{chap5-oscillation_inputs}
+  %\input{chap5-oscillation_inputs}
   \input{chap6-valor_analysis_2}
   %\input{chap7-Conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
