--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1445,3 +1445,109 @@ howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=
 note = "{[Accessed: Oct, 2022]}"
 }
 
+@article{MiniBooNE_nue_app_contour,
+    author = "Aguilar-Arevalo, A. A. and others",
+    collaboration = "MiniBooNE",
+    title = "{Improved Search for $\bar \nu_\mu \rightarrow \bar \nu_e$ Oscillations in the MiniBooNE Experiment}",
+    eprint = "1303.2588",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "FERMILAB-PUB-13-066-AD-E-PPD, LA-UR-13-21523",
+    doi = "10.1103/PhysRevLett.110.161801",
+    journal = "Phys. Rev. Lett.",
+    volume = "110",
+    pages = "161801",
+    year = "2013"
+}
+
+@article{icarus_nue_app_contour,
+	doi = {10.1140/epjc/s10052-013-2345-6},
+  
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-013-2345-6},
+  
+	year = 2013,
+	month = {mar},
+  
+	publisher = {Springer Science and Business Media {LLC}
+},
+  
+	volume = {73},
+  
+	number = {3},
+  
+	author = {M. Antonello and B. Baibussinov and P. Benetti and E. Calligarich and N. Canci and S. Centro and A. Cesana and K. Cie{\'{s}}lik and D. B. Cline and A. G. Cocco and A. Dabrowska and D. Dequal and A. Dermenev and R. Dolfini and C. Farnese and A. Fava and A. Ferrari and G. Fiorillo and D. Gibin and S. Gninenko and A. Guglielmi and M. Haranczyk and J. Holeczek and A. Ivashkin and M. Kirsanov and J. Kisiel and I. Kochanek and J. Lagoda and S. Mania and A. Menegolli and G. Meng and C. Montanari and S. Otwinowski and A. Piazzoli and P. Picchi and F. Pietropaolo and P. Plonski and A. Rappoldi and G. L. Raselli and M. Rossella and C. Rubbia and P. R. Sala and E. Scantamburlo and A. Scaramelli and E. Segreto and F. Sergiampietri and D. Stefan and J. Stepaniak and R. Sulej and M. Szarska and M. Terrani and F. Varanini and S. Ventura and C. Vignoli and H. G. Wang and X. Yang and A. Zalewska and K. Zaremba},
+  
+	title = {Experimental search for the {\textquotedblleft}{LSND} anomaly{\textquotedblright} with the {ICARUS} detector in the {CNGS} neutrino beam},
+  
+	journal = {The European Physical Journal C}
+}
+
+@article{KARMEN_nue_app_contour,
+    author = "Armbruster, B. and others",
+    collaboration = "KARMEN",
+    title = "{Upper limits for neutrino oscillations $\numubar \rightarrow \nuebar$ from muon decay at rest}",
+    eprint = "hep-ex/0203021",
+    archivePrefix = "arXiv",
+    doi = "10.1103/PhysRevD.65.112001",
+    journal = "Phys. Rev. D",
+    volume = "65",
+    pages = "112001",
+    year = "2002"
+}
+
+@article{NOMAD,
+	doi = {10.1016/j.physletb.2003.07.029},
+  
+	url = {https://doi.org/10.1016%2Fj.physletb.2003.07.029},
+  
+	year = 2003,
+	month = {sep},
+  
+	publisher = {Elsevier {BV}
+},
+  
+	volume = {570},
+  
+	number = {1-2},
+  
+	pages = {19--31},
+  
+	author = {P. Astier and D. Autiero and A. Baldisseri and M. Baldo-Ceolin and M. Banner and G. Bassompierre and K. Benslama and N. Besson and I. Bird and B. Blumenfeld and F. Bobisut and J. Bouchez and S. Boyd and A. Bueno and S. Bunyatov and L. Camilleri and A. Cardini and P.W. Cattaneo and V. Cavasinni and A. Cervera-Villanueva and R. Challis and A. Chukanov and G. Collazuol and G. Conforto and C. Conta and M. Contalbrigo and R. Cousins and D. Daniels and H. Degaudenzi and T. Del Prete and A. De Santo and T. Dignan and L. Di Lella and E. do Couto e Silva and J. Dumarchez and M. Ellis and G.J. Feldman and R. Ferrari and D. Ferr{\`{e}}re and V. Flaminio and M. Fraternali and J.-M. Gaillard and E. Gangler and A. Geiser and D. Geppert and D. Gibin and S. Gninenko and A. Godley and J.-J. Gomez-Cadenas and J. Gosset and C. Gö{\ss}ling and M. Gouan{\`{e}}re and A. Grant and G. Graziani and A. Guglielmi and C. Hagner and J. Hernando and D. Hubbard and P. Hurst and N. Hyett and E. Iacopini and C. Joseph and F. Juget and N. Kent and M. Kirsanov and O. Klimov and J. Kokkonen and A. Kovzelev and A. Krasnoperov and D. Kustov and S. Lacaprara and C. Lachaud and B. Laki{\'{c}} and A. Lanza and L. La Rotonda and M. Laveder and A. Letessier-Selvon and J.-M. Levy and L. Linssen and A. Ljubi{\v{c}} and J. Long and A. Lupi and A. Marchionni and F. Martelli and X. M{\'{e}}chain and J.-P. Mendiburu and J.-P. Meyer and M. Mezzetto and S.R. Mishra and G.F. Moorhead and D. Naumov and P. N{\'{e}}d{\'{e}}lec and Yu. Nefedov and C. Nguyen-Mau and D. Orestano and F. Pastore and L.S. Peak and E. Pennacchio and H. Pessard and R. Petti and A. Placci and G. Polesello and D. Pollmann and A. Polyarush and B. Popov and C. Poulsen and L. Rebuffi and R. Ren{\`{o}} and J. Rico and P. Riemann and C. Roda and A. Rubbia and F. Salvatore and K. Schahmaneche and B. Schmidt and T. Schmidt and A. Sconza and M. Sevior and D. Sillou and F.J.P. Soler and G. Sozzi and D. Steele and U. Stiegler and M. Stip{\v{c}}evi{\'{c}} and Th. Stolarczyk and M. Tareb-Reyes and G.N. Taylor and V. Tereshchenko and A. Toropin and A.-M. Touchard and S.N. Tovey and M.-T. Tran and E. Tsesmelis and J. Ulrichs and L. Vacavant and M. Valdata-Nappi and V. Valuev and F. Vannucci and K.E. Varvell and M. Veltri and V. Vercesi and G. Vidal-Sitjes and J.-M. Vieira and T. Vinogradova and F.V. Weber and T. Weisse and F.F. Wilson and L.J. Winton and B.D. Yabsley and H. Zaccone and K. Zuber and P. Zuccon},
+  
+	title = {Search for $\numu \rightarrow \nue$ oscillations in the {NOMAD} experiment},
+  
+	journal = {Physics Letters B}
+}
+
+@article{OPERA,
+  doi = {10.48550/ARXIV.1303.3953},
+  
+  url = {https://arxiv.org/abs/1303.3953},
+  
+  author = {{OPERA Collaboration} and Agafonova, N. and Aleksandrov, A. and Anokhina, A. and Aoki, S. and Ariga, A. and Ariga, T. and Autiero, D. and Badertscher, A. and Dhahbi, A. Ben and Bertolin, A. and Bozza, C. and Brugnera, R. and Brunet, F. and Brunetti, G. and Buettner, B. and Buontempo, S. and Chaussard, L. and Chernyavsky, M. and Chiarella, V. and Chukanov, A. and Consiglio, L. and D'Ambrosio, N. and De Lellis, G. and De Serio, M. and Sanchez, P. del Amo and Di Crescenzo, A. and Di Ferdinando, D. and Di Marco, N. and Dmitrievsky, S. and Dracos, M. and Duchesneau, D. and Dusini, S. and Dzhatdoev, T. and Ebert, J. and Ereditato, A. and Ferber, T. and Fini, R. A. and Fukuda, T. and Garfagnini, A. and Giacomelli, G. and Goellnitz, C. and Goldberg, J. and Gornushkin, Y. and Grella, G. and Grianti, F. and Guler, A. M. and Gustavino, C. and Hagner, C. and Hamada, K. and Hara, T. and Hierholzer, M. and Hollnagel, A. and Hosseini, B. and Ishida, H. and Ishiguro, K. and Jakovcic, K. and Jollet, C. and Juget, F. and Kamiscioglu, C. and Kamiscioglu, M. and Kawada, J. and Kim, J. H. and Kim, S. H. and Kimura, M. and Kitagawa, N. and Klicek, B. and Kodama, K. and Komatsu, M. and Kose, U. and Kreslo, I. and Lauria, A. and Lenkeit, J. and Ljubicic, A. and Longhin, A. and Loverre, P. and Malgin, A. and Mancini-Terracciano, C. and Mandrioli, G. and Marteau, J. and Matsuo, T. and Matveev, V. and Mauri, N. and Medinaceli, E. and Meisel, F. W. and Meregaglia, A. and Migliozzi, P. and Mikado, S. and Minotti, A. and Monacelli, P. and Montesi, M. C. and Morishima, K. and Muciaccia, M. T. and Nakamura, M. and Nakano, T. and Nakatsuka, Y. and Naumov, D. and Niwa, K. and Ogawa, S. and Okateva, N. and Olchevsky, A. and Omura, T. and Ozaki, K. and Paoloni, A. and Park, B. D. and Park, I. G. and Pastore, A. and Patrizii, L. and Pennacchio, E. and Pessard, H. and Pistillo, C. and Podgrudkov, D. and Polukhina, N. and Pozzato, M. and Pretzl, K. and Pupilli, F. and Rescigno, R. and Roda, M. and Roganova, T. and Rokujo, H. and Rosa, G. and Rostovtseva, I. and Rubbia, A. and Russo, A. and Ryazhskaya, O. and Sato, O. and Sato, Y. and Schchedrina, T. and Schembri, A. and Schmidt-Parzefall, W. and Shakiryanova, I. and Sheshukov, A. and Shibuya, H. and Shiraishi, T. and Shoziyoev, G. and Simone, S. and Sioli, M. and Sirignano, C. and Sirri, G. and Spinetti, M. and Stanco, L. and Starkov, N. and Stellacci, S. M. and Stipcevic, M. and Strauss, T. and Strolin, P. and Suzuki, K. and Takahashi, S. and Tenti, M. and Terranova, F. and Tioukov, V. and Tolun, P. and Tufanli, S. and Vilain, P. and Vladimirov, M. and Votano, L. and Vuilleumier, J. -L. and Wilquet, G. and Wonsak, B. and Yoon, C. S. and Yoshida, J. and Zaitsev, Y. and Zemskova, S. and Zghiche, A.},
+  
+  keywords = {High Energy Physics - Experiment (hep-ex), FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = "{Search for $\numu \rightarrow \nue $ oscillations with the OPERA experiment in the CNGS beam}",
+  
+  publisher = {arXiv},
+  
+  year = {2013},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{E776,
+  title = "{Search for Muon-Neutrino Oscillations $\numu \rightarrow \nue$ $(\numubar \rightarrow \nuebar)$ in a Wide-Band Neutrino Beam}",
+  author = {Borodovsky, L. and Chi, C. Y. and Ho, Y. and Kondakis, N. and Lee, W. and Mechalakos, J. and Rubin, B. and Seto, R. and Stoughton, C. and Tzanakos, G. and Blumenfeld, B. and Chichura, L. and Krizmanic, J. and Lincke, E. and Lueking, L. and Lyle, W. and Pevsner, A. and Hogan, W. P. and O'Brien, E. and Reardon, K. and Sheldon, P. D. and Sullivan, G. W.},
+  journal = {Phys. Rev. Lett.},
+  volume = {68},
+  issue = {3},
+  pages = {274--277},
+  numpages = {0},
+  year = {1992},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.68.274},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.68.274}
+}
